Fix tdf#117410 - UI: Settings in PDF Options not remembered...

for next export

Change-Id: I6f066c81d96595a4560f5bb9e148001b004b38f0